--- a/cart.html
+++ b/cart.html
@@ -12,18 +12,16 @@
 
     <!-- custom css file link -->
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
-
     <section id="header">
         <a href="#"><img src="images/logo.png" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="shop.html">Products</a></li>
+                <li><a href="blog.html">News & Events</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
@@ -38,7 +36,7 @@
 
     <section id="page-header" class="about-header">
         <h2>#cart</h2>
-        <p>Add your coupon code & SAVE upto 70%!</p>
+        <p>Add your items to the cart.</p>
     </section>
 
     <section id="cart" class="section-p1">
@@ -48,82 +46,30 @@
                     <td>Remove</td>
                     <td>Image</td>
                     <td>Product</td>
-                    <td>Price</td>
                     <td>Quantity</td>
-                    <td>Subtotal</td>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td><a href="#"><i class="fas fa-times-circle" style="color:black"></i></a></td>
-                    <td><img src="images/products/f1.jpg" alt=""></td>
-                    <td>Cartoon Astronaut T-Shirt</td>
-                    <td>$118.19</td>
-                    <td><input type="number" value="1"></td>
-                    <td>$118.19</td>
-                </tr>
-                <tr>
-                    <td><a href="#"><i class="fas fa-times-circle" style="color:black"></i></a></td>
-                    <td><img src="images/products/f2.jpg" alt=""></td>
-                    <td>Cartoon Astronaut T-Shirt</td>
-                    <td>$118.19</td>
-                    <td><input type="number" value="1"></td>
-                    <td>$118.19</td>
-                </tr>
-                <tr>
-                    <td><a href="#"><i class="fas fa-times-circle" style="color:black"></i></a></td>
-                    <td><img src="images/products/f3.jpg" alt=""></td>
-                    <td>Cartoon Astronaut T-Shirt</td>
-                    <td>$118.19</td>
-                    <td><input type="number" value="1"></td>
-                    <td>$118.19</td>
-                </tr>
+            <tbody id="cart-items">
+                <!-- Cart items will be dynamically generated here -->
             </tbody>
         </table>
-    </section>
-
-    <section id="cart-add" class="section-p1">
-        <div class="coupon">
-            <h3>Apply Coupon</h3>
-            <div>
-                <input type="text" placeholder="Enter Your Coupon">
-                <button class="normal">Apply</button>
-            </div>
-        </div>
-        <div class="subtotal">
-            <h3>Cart Totals</h3>
-            <table>
-                <tr>
-                    <td>Cart Subtotal</td>
-                    <td>$ 335</td>
-                </tr>
-                <tr>
-                    <td>Shipping</td>
-                    <td>Free</td>
-                </tr>
-                <tr>
-                    <td><strong>Total</strong></td>
-                    <td><strong>$ 335</strong></td>
-                </tr>
-            </table>
-            <button class="normal">Proceed to checkout</button>
-        </div>
     </section>
 
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="images/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> Lahore, Pakistan - 54840</p>
-            <p><strong>Phone:</strong> +92-321-4655990</p>
-            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> Tripureshwor, Kathmandu, Nepal</p>
+            <p><strong>Email:</strong> info@dmsnepal.com</p>
+            <p><strong>Phone:</strong> +977 01 - 536 2654, 410 0634</p>
+            <p><strong>Hours:</strong> 9:00 - 18:00, Sun - Fri</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-instagram"></i>
-                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-linkedin"></i>
                     <i class="fab fa-youtube"></i>
                 </div>
             </div>
@@ -155,7 +101,7 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
+            <p>&copy; Dynamic Medical System Pvt. Ltd. | All Rights Reserved | 2024</p>
         </div>
     </footer>
 
