--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Dynamic Medical System Pvt. Ltd.</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -44,30 +45,30 @@
     <section id="contact-details" class="section-p1">
         <div class="details">
             <span>GET IN TOUCH</span>
-            <h2>Visit one of our agency locations or contact us today.</h2>
+            <h2>Visit our Head Office or contact us today.</h2>
             <h3>Head Office</h3>
             <div>
                 <li>
                     <i class="fas fa-map"></i>
-                    <p>Lahore, Pakistan 54840</p>
+                    <p>Tripureshwor, Kathmandu, Nepal</p>
                 </li>
                 <li>
                     <i class="fas fa-envelope"></i>
-                    <p>connectwithmawais@gmail.com</p>
+                    <p>info@dmsnepal.com</p>
                 </li>
                 <li>
                     <i class="fas fa-phone-alt"></i>
-                    <p>+92-321-4655990
+                    <p>+977-1-536 2654</p>
                 </li>
                 <li>
                     <i class="fas fa-clock"></i>
-                    <p>Monday to Saturday: 9:00 AM to 16:00 PM</p>
+                    <p>Sunday to Fridya: 9:00 AM to 16:00 PM</p>
                 </li>
             </div>
         </div>
         <div class="map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217759.48983392344!2d74.1943055256652!3d31.483156882376644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39190483e58107d9%3A0xc23abe6ccc7e2462!2sLahore%2C%20Punjab%2C%20Pakistan!5e0!3m2!1sen!2s!4v1676498542792!5m2!1sen!2s"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d293.14195960230904!2d85.31686579860754!3d27.69309422148935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190009cd459b%3A0xbb6544fb1d7ba8e6!2sTripureshwor%20kumari%20marg!5e0!3m2!1sen!2snp!4v1725080763082!5m2!1sen!2snp"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -86,15 +87,15 @@
         <div class="people">
             <div>
                 <img src="images/people/1.png" alt="">
-                <p><span>John Doe</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>Ramindra Neupane</span> Managing Director<br>Phone: +977 985 1036184<br>Email: info@dmsnepal.com</p>
             </div>
             <div>
                 <img src="images/people/2.png" alt="">
-                <p><span>William Smith</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>Umanga Lamichhane</span> Sales & Marketing Manager<br>Phone: +977 985 1126184<br>Email: umanga@dmsnepal.com</p>
             </div>
             <div>
                 <img src="images/people/3.png" alt="">
-                <p><span>Emma Stone</span> Senior Marketing Manager<br>Phone: +000 123 000 77 88<br>Email: contact@example.com</p>
+                <p><span>Shiwam Paudel</span> Executive IT Support<br>Phone: +977 985 1340687<br>Email: webmaster@dmsnepal.com</p>
             </div>
         </div>
     </section>
@@ -114,16 +115,17 @@
         <div class="col">
             <img class="logo" src="images/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> Lahore, Pakistan - 54840</p>
-            <p><strong>Phone:</strong> +92-321-4655990</p>
-            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> Tripureshwor, Kathmandu, Nepal</p>
+            <p><strong>Email:</strong> info@dmsnepal.com</p>
+            <p><strong>Phone:</strong> +977 01 - 536 2654, 410 0634</p>
+            <p><strong>Hours:</strong> 9:00 - 18:00, Sun - Fri</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-instagram"></i>
-                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-linkedin"></i>
                     <i class="fab fa-youtube"></i>
                 </div>
             </div>
@@ -155,7 +157,7 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
+            <p>&copy; Dynamic Medical System Pvt. Ltd. | All Rights Reserved | 2024</p>
         </div>
     </footer>
 
