--- a/shop.html
+++ b/shop.html
@@ -22,8 +22,8 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a class="active" href="shop.html">Products</a></li>
+                <li><a href="blog.html">News & Events</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
@@ -323,16 +323,17 @@
         <div class="col">
             <img class="logo" src="images/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong> Lahore, Pakistan - 54840</p>
-            <p><strong>Phone:</strong> +92-321-4655990</p>
-            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <p><strong>Address:</strong> Tripureshwor, Kathmandu, Nepal</p>
+            <p><strong>Email:</strong> info@dmsnepal.com</p>
+            <p><strong>Phone:</strong> +977 01 - 536 2654, 410 0634</p>
+            <p><strong>Hours:</strong> 9:00 - 18:00, Sun - Fri</p>
             <div class="follow">
                 <h4>Follow us</h4>
                 <div class="icon">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-twitter"></i>
                     <i class="fab fa-instagram"></i>
-                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-linkedin"></i>
                     <i class="fab fa-youtube"></i>
                 </div>
             </div>
@@ -364,7 +365,7 @@
             <img src="images/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>Created By Muhammad Awais | All Rights Reserved | &#169; 2023</p>
+            <p>&copy; Dynamic Medical System Pvt. Ltd. | All Rights Reserved | 2024</p>
         </div>
     </footer>
 
