--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Dynamic Medical System Pvt. Ltd.</title>
-    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -23,9 +23,9 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="shop.html">Products</a></li>
+                <li><a href="blog.html">News & Events</a></li>
                 <li><a class="active" href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
@@ -38,7 +38,7 @@
     </section>
 
     <section id="page-header" class="about-header">
-        <h2>#let's_talk</h2>
+        <h2>Contact Us</h2>
         <p>LEAVE A MESSAGE, We love to hear from you!</p>
     </section>
 
