--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Dynamic Medical System Pvt. Ltd.</title>
+    <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -22,9 +23,9 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a class="active" href="about.html">About</a></li>
+                <li><a href="shop.html">Products</a></li>
+                <li><a href="blog.html">News & Events</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
@@ -37,35 +38,36 @@
     </section>
 
     <section id="page-header" class="about-header">
-        <h2>#KnowUs</h2>
-        <p>Lorem ipsusm dolor sit amet, consectelur</p>
+        <h2>About</h2>
+        <p></p>
     </section>
 
     <section id="about-head" class="section-p1">
         <img src="images/about/a6.jpg" alt="">
         <div>
             <h2>Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis autterirure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+            <p>Dynamic Medical System Pvt. Ltd. has been dedicated to serving the healthcare sector in Nepal since its
+                establishment in 2001 A.D. We specialize in Diagnostics, Disinfection & Sterilization, Dermatology, and
+                Medical & Critical Care, and are proud to be the core channel partners of over 20 multinational
+                companies from around the world. We have built a reputation for excellence by striving tirelessly to
+                become Nepal's most trusted healthcare provider, offering reliable and fast service while maintaining
+                uncompromising quality.
             </p>
-            <abbr title="">Create stunning images with as much or as little control as fa-you
-                like thanks to a choice of Basic and Creative modes.
+            <abbr title="">We work hand in hand with our global partners and are committed to quality service. We
+                look forward to serving Nepal's as well as global healthcare needs for many years to come.
             </abbr>
             <br><br>
-            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Create stunning images
-                with as much or as little control as you like thanks to a choice of Basic and Creative modes.
+            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">
+                In-Vitro Diagnostics | Disinfection & Sterilization | Medical & Critical Care | Dermatology & Aesthetic
+                Care |
             </marquee>
         </div>
     </section>
 
     <section id="about-app" class="section-p1">
-        <h1>Download our <a href=#>App</a></h1>
-        <div class="video">
-            <video autoplay muted loop src="images/about/1.mp4"></video>
+        <h1>Explore our <a href=#>Services</a></h1>
+        <div class="video" style="height: 600px; width: 100%;">
+            <video autoplay muted loop src="images/about/DMS Video.mp4"></video>
         </div>
     </section>
 
@@ -137,10 +139,10 @@
         <div class="col">
             <h4>My Account</h4>
             <a href="#">Sign In</a>
-            <a href="#">View Cart</a>
+            <a href="cart.html">View Cart</a>
             <a href="#">My Wishlist</a>
             <a href="#">Track My Order</a>
-            <a href="#">Help</a>
+            <a href="contact.html">Help</a>
         </div>
         <div class="col install">
             <h4>Install App</h4>
