--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart - Dynamic Medical System Pvt. Ltd.</title>
+    <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -20,9 +21,9 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="shop.html">Products</a></li>
                 <li><a href="blog.html">News & Events</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a class="active" href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
@@ -35,7 +36,7 @@
     </section>
 
     <section id="page-header" class="about-header">
-        <h2>#cart</h2>
+        <h2>Cart</h2>
         <p>Add your items to the cart.</p>
     </section>
 
@@ -50,7 +51,6 @@
                 </tr>
             </thead>
             <tbody id="cart-items">
-                <!-- Cart items will be dynamically generated here -->
             </tbody>
         </table>
     </section>
