--- a/singleProduct.html
+++ b/singleProduct.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Detail - Dynamic Medical System Pvt. Ltd.</title>
+    <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
@@ -22,9 +23,10 @@
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
-                <li><a href="blog.html">News & Events</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a class="active" href="shop.html">Products</a></li>
+                <li><a href="blog.html">News & Events</a></li>
+                
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
