--- a/index.html
+++ b/index.html
@@ -151,66 +151,66 @@
         <p>Explore other Healthcare Solutions</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="images/products/n1.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n2.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n3.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n4.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n5.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n6.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n7.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n8.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <span>iSens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
@@ -219,16 +219,16 @@
 
     <section id="sm-banner" class="section-p1">
         <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
+            <h4>iStar 500</h4>
+            <h2>from DrawRay</h2>
+            <span>Mono-Test CLIA Machine</span>
             <button class="white">Learn more</button>
         </div>
         <div class="banner-box">
-            <h4>spring/summer</h4>
-            <h2>upcoming season</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white">Collection</button>
+            <h4>Taski Ergodisc 165</h4>
+            <h2>from Diversey</h2>
+            <span>Single Disk Machine</span>
+            <button class="white">Learn More</button>
         </div>
     </section>
 
