--- a/shop.html
+++ b/shop.html
@@ -45,7 +45,7 @@
     <section id="product1" class="section-p1">
         <div class="pro-container">
             <div class="pro" onclick="window.location.href='singleProduct.html';">
-                <img src="images/products/f1.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -61,7 +61,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f2.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -77,7 +77,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f3.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -93,7 +93,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f4.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -109,7 +109,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f5.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -125,7 +125,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f6.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -141,7 +141,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f7.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -157,7 +157,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/f8.jpg" alt="">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -173,7 +173,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n1.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -189,7 +189,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n2.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -205,7 +205,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n3.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -221,7 +221,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n4.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -237,7 +237,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n5.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -253,7 +253,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n6.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -269,7 +269,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n7.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
@@ -285,7 +285,7 @@
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/products/n8.jpg" alt="">
+                <img src="images/products/n.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-Shirts</h5>
