banner design updates

--- a/index.html
+++ b/index.html
@@ -234,23 +234,23 @@
 
     <section id="banner3">
         <div class="banner-box">
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter Collection -50% OFF</h3>
+            <h2>Nihon Kohden Ventilators</h2>
+            <h3>SAFE RELIABLE RESPIRATORY MANAGEMENT</h3>
         </div>
         <div class="banner-box">
-            <h2>NEW FOOTWEAR COLLECTION</h2>
-            <h3>Spring / Summer 2023</h3>
+            <h2>Sterilizer for Hospital Solid Waste</h2>
+            <h3>For Hospitals upto 600 beds & External Centralized Plants</h3>
         </div>
         <div class="banner-box">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trendy Prints</h3>
+            <h2>Biochemistry Analyzers</h2>
+            <h3>Tailored to suit a diverse array of laboratory settings, from small clinics to hospitals</h3>
         </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
-            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+            <p>Get E-mail updates about our latest News and <span> Events.</span></p>
         </div>
         <div class="form">
             <input type="text" placeholder="Your email address">
